views/screen.sass
@import "compass/reset"
@import "compass/css3"

$base_font_size: .875em
$base_line_height: 1.28571429em

body
  background: #1b1b24
  color: #8487AF
  font:
    family: "helvetica neue", helvetica, arial, geneva, sans-serif
    size: 100%

.wrapper
  max-width: 600px
  margin: 0 auto
  padding: 0 10px

header
  font-family: "CorbelRegular", "helvetica neue", helvetica, arial, geneva, sans-serif
  -webkit-font-smoothing: antialiased
  font-weight: normal
  padding: 50px 0
  text-align: center
  text-shadow: 0 1px 1px #000
  text-transform: lowercase

  h1
    color: #fff
    font-size: 2.1875em
    margin-bottom: 0.514285714em

  h2
    color: #a292ff
    font-size: 1.5625em
    line-height: 1.2em

nav
  text-align: center

  li
    display: inline-block
    margin-right: 30px

    a
      color: #5c5f80
      display: block
      font:
        family: "CorbelRegular", "helvetica neue", helvetica, arial, geneva, sans-serif
        size: 1.25em
      text-decoration: none
      text-shadow: 0 0 1px #000
      width: 150px

      span
        display: block

      .icon
        background-image: url("/images/os_logos.png")
        height: 148px
        margin-bottom: .75em

      &:hover
        color: rgb(166, 166, 255)
        text-shadow: 0 0 6px rgba(120, 120, 255, .4)

      &.selected
        color: rgb(143, 191, 255)
        text-shadow: 0 0 6px rgba(56,187,253,.7)

    &:last-child
      margin-right: 0

    &.osx a:hover .icon
      background-position: 0 -148px

    &.osx a.selected .icon
      background-position: 0 -296px

    &.windows .icon
      background-position: -150px 0

    &.windows a:hover .icon
      background-position: -150px -148px

    &.windows a.selected .icon
      background-position: -150px -296px

    &.linux .icon
      background-position: -300px 0

    &.linux a:hover .icon
      background-position: -300px -148px

    &.linux a.selected .icon
      background-position: -300px -296px

#instructions
  margin: 0 auto
  padding: 50px 0

  a:link,
  a:visited
    color: #9782FF
    text-decoration: none

  a:hover,
  a:active
    text-decoration: underline

  h3
    color: #D4D4FF
    font:
      family: "CorbelRegular", "helvetica neue", helvetica, arial, geneva, sans-serif
      size: 1.25em
    margin-bottom: 1.2em

  p
    font-size: $base_font_size
    line-height: $base_line_height
    margin-bottom: 1.71428571em

    &:last-child
      margin-bottom: 0

    &.download
      margin-bottom: 2.85714286em
      text-align: center

    &.download
      *
        @include border-radius(41px)
        display: inline-block

      a:link.button,
      a:visited.button
        background: #7B5AE0
        background-position: 1.71428571em center, 0 0
        background-repeat: no-repeat
        @include background-image(image-url("/images/download_glyph.png"), linear-gradient(top, #9372F7,#6443C9))
        border: none
        @include box-shadow(0 1px 3px rgba(0,0,0,0.5),0 1px 2px rgba(255,255,255,0.25) inset)
        color: #100F14
        font-family: "helvetica neue", helvetica, arial, geneva, sans-serif
        -webkit-font-smoothing: antialiased
        font-weight: bold
        min-width: 5.71428571em
        padding: .642857143em 1.71428571em .642857143em 3em
        text-decoration: none
        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.15)

      code
        background: #111116
        @include box-shadow(0 1px 0 rgba(255, 255, 255, .02), 0 1px 2px rgba(0, 0, 0, .25) inset)
        color: #8487AF
        padding: .642857143em 0
        text-align: center
        width: 37.6923077em

  ul
    list-style: disc
    margin-bottom: 1.71428571em
    padding-left: 1.14285714em

    &:last-child
      margin-bottom: 0

    li
      font-size: $base_font_size
      line-height: $base_line_height

  pre
    background: #111116
    @include border-radius(3px)
    @include box-shadow(0 1px 0 rgba(255, 255, 255, .02), 0 1px 2px rgba(0, 0, 0, .25) inset)
    font-size: $base_font_size
    line-height: $base_line_height
    margin-bottom: 1.71428571em
    overflow: auto
    padding: 0.923076923em

    &:last-child
      margin-bottom: 0

    .highlight
      color: #9588FC

  code
    font:
      family: "MesloRegular", monaco, monospace
      size: .928571429em

@media screen and (max-width: 600px)
  nav
    li
      margin-right: 20px

      a
        width: 75px

        .title
          display: none

        .icon
          background-size: 225px 222px
          height: 74px

      &.osx a:hover .icon
        background-position: 0 -74px

      &.osx a.selected .icon
        background-position: 0 -148px

      &.windows .icon
        background-position: -75px 0

      &.windows a:hover .icon
        background-position: -75px -74px

      &.windows a.selected .icon
        background-position: -75px -148px

      &.linux .icon
        background-position: -150px 0

      &.linux a:hover .icon
        background-position: -150px -74px

      &.linux a.selected .icon
        background-position: -150px -148px

  #instructions
    padding: 30px 0

    p.download code
      overflow-x: auto
      white-space: nowrap
      width: 23.0769231em

@media only screen and (max-device-width: 480px)
  // Don't zoom in on the Heroku header drop-down
  // The font-size needs to be at least 16px
  select
    font-size: 16px

@media only screen and (-webkit-min-device-pixel-ratio: 2)
  #instructions
    p.download a:link.button,
    p.download a:visited.button,
      @include background-image(image-url("/images/download_glyph_2x.png"), linear-gradient(top, #9372F7,#6443C9))
      background-size: 11px 15px, 100%

.no-multiplebgs, .no-cssgradients
  // Only show download glyph if:
  //
  // * We can't show multiple background images (IE7 & IE8)
  // * We can't render CSS gradients (IE9)
  #instructions p.download a:link.button,
  #instructions p.download a:visited.button
    background-image: url("/images/download_glyph.png")
    background-position: 1.71428571em center

